--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ li { list-style-type: none; /*unordered list appears without bullets*/
 	<footer>
 		<h3 style= "text-align: center;">If you'd like to reach out!</h3>
 		<p style= "text-align: center;">Call or email me for any questions, comments, concerns!<br>
-			Phone: <a href="tel:+18182902000">(818)-290-2750</a><br> 
-			E-mail:	<a href="cantellanj@gmail.com">Email me!</a>  
+			Phone: <a href="tel:+18182902000">(818)-280-2100</a><br> 
+			E-mail:	<a href="">Email me!</a>  
 				<br>
 			<a href="#top">Back to Top</a>
 		</p>
