--- a/mystuff.html
+++ b/mystuff.html
@@ -160,8 +160,8 @@
 <footer>
     <h3 style= "text-align: center;">If you'd like to reach out!</h3>
     <p style= "text-align: center;">Call or email me for any questions, comments, concerns!<br>
-        Phone: <a href="tel:+18182902000">(818)-290-2750</a> | 
-        E-mail:	<a href="cantellanj@gmail.com">Email me!</a>  
+        Phone: <a href="tel:+18182902000">(818)-280-2100</a> | 
+        E-mail:	<a href="">Email me!</a>  
             <br>
         <a href="presentation_of_learning_project.html">My Main Page!</a> |
         <a href="#top">Back to Top</a>
